--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Brandon's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1062e64fed.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-        <ul class="d-flex justify-content-start list-unstyled justify-content-evenly">
-            <li class="icon-link"><a href=""><i class="fa-brands fa-github fa-lg" style="color: #ededed;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-facebook-f fa-lg" style="color: #ffffff;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></a></li>
+        <ul class="d-flex justify-content-start list-unstyled justify-content-evenly" id="LogoLinks">
+            <li class="icon-link"><a href=""><i class="fa-brands fa-github fa-2xl" style="color: #ededed;"></i></a></li>
+            <li class="icon-link"><a href=""><i class="fa-brands fa-facebook-f fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li class="icon-link"><a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li class="icon-link"><a href=""><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></a></li>
+            <div class=" display-6 justify-content-end text-white" id="logo">Brandon Roulstone</div>
         </ul>
+        
         <nav>
           <ul class="nav-container">
-            <li class="nav-icon" id="HomePage"><a href="" class=""><i class="fa-solid fa-house fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li class="nav-icon" id="AboutPage"><a href="" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li class="nav-icon" id="ContactPage"><a href="" class=""><i class="fa-solid fa-phone fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li class="nav-icon" id="ProjectsPage"><a href="" class=""><i class="fa-solid fa-file-pen fa-2xl" style="color: #ffffff;"></i></a></li>
+            <li class="nav-icon" id="HomePage"><a href="" class=""><i class="fa-solid fa-house fa-2xl" style="color: #000000;"></i></a></li>
+            <li class="nav-icon" id="AboutPage"><a href="" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;"></i></a></li>
+            <li class="nav-icon" id="ContactPage"><a href="" class=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;"></i></a></li>
+            <li class="nav-icon" id="ProjectsPage"><a href="" class=""><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;"></i></a></li>
           </ul>
         </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
