--- a/index.html
+++ b/index.html
@@ -9,21 +9,51 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+
+
+    <!-- Social meadia links -->
         <ul class="d-flex justify-content-start list-unstyled justify-content-evenly" id="LogoLinks">
-            <li class="icon-link"><a href=""><i class="fa-brands fa-github fa-2xl" style="color: #ededed;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-facebook-f fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a></li>
-            <li class="icon-link"><a href=""><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></a></li>
+          
+            <li class="icon-link">
+              <a href=""><i class="fa-brands fa-github fa-2xl" style="color: #ededed;"></i></a>
+            </li>
+            <li class="icon-link">
+              <a href=""><i class="fa-brands fa-facebook-f fa-2xl" style="color: #ffffff;"></i></a>
+            </li>
+            <li class="icon-link">
+              <a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a>
+            </li>
+            <li class="icon-link">
+              <a href=""><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></a>
+            </li>
+            <!-- logo -->
             <div class=" display-6 justify-content-end text-white" id="logo">Brandon Roulstone</div>
+
         </ul>
+
+
+        <!-- Heading -->
+        <div class="d-flex justify-content-center display-1" id="greeting">Hello I'm Brandon</div>
         
+        <!-- Navbar -->
         <nav>
+
           <ul class="nav-container">
-            <li class="nav-icon" id="HomePage"><a href="" class=""><i class="fa-solid fa-house fa-2xl" style="color: #000000;"></i></a></li>
-            <li class="nav-icon" id="AboutPage"><a href="" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;"></i></a></li>
-            <li class="nav-icon" id="ContactPage"><a href="" class=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;"></i></a></li>
-            <li class="nav-icon" id="ProjectsPage"><a href="" class=""><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;"></i></a></li>
+
+            <li class="nav-icon" id="HomePage">
+              <a href="" class=""><i class="fa-solid fa-house fa-2xl" style="color: #000000;"></i></a>
+            </li>
+            <li class="nav-icon" id="AboutPage">
+              <a href="" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;"></i></a>
+            </li>
+            <li class="nav-icon" id="ContactPage">
+              <a href="" class=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;"></i></a>
+            </li>
+            <li class="nav-icon" id="ProjectsPage">
+              <a href="" class=""><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;"></i></a>
+            </li>
           </ul>
+
         </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
