--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
-
-    <!-- Social meadia links -->
-        <ul class="d-flex justify-content-start list-unstyled justify-content-evenly" id="LogoLinks">
+    <div id="topHomePage">
+          <!-- Social meadia links -->
+          <ul class="d-flex justify-content-start list-unstyled justify-content-evenly" id="LogoLinks">
           
             <li class="icon-link">
               <a href=""><i class="fa-brands fa-github fa-2xl" style="color: #ededed;"></i></a>
@@ -41,10 +40,10 @@
           <ul class="nav-container">
 
             <li class="nav-icon" id="HomePage">
-              <a href="" class=""><i class="fa-solid fa-house fa-2xl" style="color: #000000;"></i></a>
+              <a href="#topHomePage" class=""><i class="fa-solid fa-house fa-2xl" style="color: #000000;"></i></a>
             </li>
             <li class="nav-icon" id="AboutPage">
-              <a href="" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;"></i></a>
+              <a href="#aboutPage" class=""><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;"></i></a>
             </li>
             <li class="nav-icon" id="ContactPage">
               <a href="" class=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;"></i></a>
@@ -55,6 +54,12 @@
           </ul>
 
         </nav>
+    </div>
+    <div id="aboutPage">
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+<!-- 
+ul>li*6>a -->
