--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
               <a href="#aboutPage"><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;" id="iconTwo"></i></a>
             </li>
             <li class="nav-icon" id="ContactPage">
-              <a href="#testimonials"><i class="fa-solid fa-phone fa-2xl" style="color: #000000;" id="iconThree"></i></a>
+              <a href="#testimonials"><i class="fa-solid fa-comment fa-2xl" style="color: #000000;" id="iconTwo"></i></a>
             </li>
             <li class="nav-icon" id="ProjectsPage">
-              <a href=""><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;" id="iconFour"></i></a>
+              <a href="#myProjects"><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;" id="iconFour"></i></a>
+            </li>
+            <li class="nav-icon" id="ContactPage">
+              <a href=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;" id="iconThree"></i></a>
             </li>
           </ul>
 
@@ -373,8 +376,8 @@
                 <div class="d-flex justify-content-center">
                   <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
                 </div>
-                <input type="text" name="" id="inputName" class="w-100 placeholder-glow bg-black" placeholder="Add Name and Surname">
-                <input type="text" name="" id="inputComment" class="w-100 placeholder-glow bg-black" placeholder="Add something about me">
+                <input type="text" name="" id="inputName" class="w-100 placeholder-glow bg-transparent" placeholder="Add Name and Surname">
+                <input type="text" name="" id="inputComment" class="w-100 placeholder-glow bg-transparent" placeholder="Add something about me">
                 <br>
                 <p class="text-black text-center">Add your socials</p>
                 <div class="d-flex justify-content-evenly">
@@ -386,12 +389,61 @@
                 <div class="d-flex justify-content-center">
                   <button class="btn-post">Post</button>
                 </div>
-                
+                <p class="small text-center text-white">need author's permission</p>
               </div>
               </div>
           </div> 
       </div>
       </div>
+    </div>
+    <div id="myProjects">
+
+      <div class="project-container">
+        <div class="image">
+          <img src="" alt="" class="projects-sc">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
+          <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image">
+          <img src="" alt="" class="projects-sc">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
+          <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image">
+          <img src="" alt="" class="projects-sc">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
+          <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image">
+          <img src="" alt="" class="projects-sc">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
+          <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+        </div>
+      </div>
+      <div class="project-container">
+        <div class="image">
+          <img src="" alt="" class="projects-sc">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
+          <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+        </div>
+      </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
