--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="list-lst">
               <li><h1>Hello I'm Brandon....</h1></li>
               <li class="fs-2">Student at:</li>
-              <a href="https://lifechoices.co.za/"><li><img src="https://i.postimg.cc/RZGwGy8M/logo-429x991-262x60.png" alt=""></li></a>
+              <a href="https://lifechoices.co.za/"><li><img src="https://i.postimg.cc/RZGwGy8M/logo-429x991-262x60.png" alt="Img_Brandon"></li></a>
               <li class="fs-2">Aspiring full-stack developer</li>
               <div class="d-flex justify-content-center">
                 <a href="#aboutPage"><button class="btn-about">More about me</button></a>
@@ -60,7 +60,7 @@
               <a href="#myProjects"><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;" id="iconFour"></i></a>
             </li>
             <li class="nav-icon" id="ContactPage">
-              <a href=""><i class="fa-solid fa-phone fa-2xl" style="color: #000000;" id="iconThree"></i></a>
+              <a href="#contactMe"><i class="fa-solid fa-phone fa-2xl" style="color: #000000;" id="iconThree"></i></a>
             </li>
           </ul>
 
@@ -75,7 +75,7 @@
 
           <div class="col-10 col-sm-8 col-lg-6">
 
-            <img src="https://i.postimg.cc/26wyDL97/20231009-135619.jpg" class="d-block mx-lg-auto img-fluid border rounded-5" alt="Img_Brandon" width="300" height="400" loading="lazy">
+            <img src="https://i.postimg.cc/26wyDL97/20231009-135619.jpg" class="d-block mx-lg-auto img-fluid border rounded-5" id="img" alt="Img_Brandon" width="300" height="400" loading="lazy">
 
           </div>
 
@@ -134,13 +134,13 @@
 
           <div class="box">
 
-            <img src="https://i.postimg.cc/kGhgvqPd/logo-2582748-1280-html.webp" alt="" class="icon-img">
+            <img src="https://i.postimg.cc/kGhgvqPd/logo-2582748-1280-html.webp" alt="logo-html" class="icon-img">
 
-            <img src="https://i.postimg.cc/Xqnsk6cx/logo-2582747-640-css.png" alt="" class="icon-img">
+            <img src="https://i.postimg.cc/Xqnsk6cx/logo-2582747-640-css.png" alt="logo-css" class="icon-img">
 
-            <img src="https://i.postimg.cc/B60pJfys/images-js.png" alt="" class="icon-img">
+            <img src="https://i.postimg.cc/B60pJfys/images-js.png" alt="logo-js" class="icon-img">
 
-            <img src="https://i.postimg.cc/qvK2qZ27/images-reactjs.png" alt="" class="icon-img">
+            <img src="https://i.postimg.cc/qvK2qZ27/images-reactjs.png" alt="logo-reactjs" class="icon-img">
 
           </div>
 
@@ -355,7 +355,7 @@
         <div class="project-container">
           <div class="image">
 
-            <img src="https://i.postimg.cc/pddpStVX/Screenshot-2023-11-02-103330.png" alt="" class="projects-sc">
+            <img src="https://i.postimg.cc/pddpStVX/Screenshot-2023-11-02-103330.png" alt="premium-sneakers-clone" class="projects-sc">
             
           </div>
 
@@ -371,7 +371,7 @@
 
         <div class="project-container">
           <div class="image">
-            <img src="https://i.postimg.cc/Xq70xnkn/Screenshot-2023-11-02-103755.png" alt="" class="projects-sc">
+            <img src="https://i.postimg.cc/Xq70xnkn/Screenshot-2023-11-02-103755.png" alt="Calculator" class="projects-sc">
           </div>
           <div class="d-flex justify-content-center">
             <a href="https://github.com/brandonRoulstone/Calculator"><button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button></a>
@@ -380,7 +380,7 @@
         </div>
         <div class="project-container">
           <div class="image">
-            <img src="https://i.postimg.cc/5tP9HxQd/Screenshot-2023-11-02-104915.png" alt="" class="projects-sc">
+            <img src="https://i.postimg.cc/5tP9HxQd/Screenshot-2023-11-02-104915.png" alt="shoppingCart" class="projects-sc">
           </div>
           <div class="d-flex justify-content-center">
             <a href="https://github.com/brandonRoulstone/shoppingCart"><button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button></a>
@@ -389,11 +389,11 @@
         </div>
         <div class="project-container">
           <div class="image">
-            <img src="" alt="" class="projects-sc">
+            <img src="https://i.postimg.cc/XqtkJw3Z/Screenshot-2023-11-02-153628.png" alt="Netflix" class="projects-sc">
           </div>
           <div class="d-flex justify-content-center">
-            <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
-            <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+            <a href="https://github.com/brandonRoulstone/netflixTask1"><button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button></a>
+            <a href="https://netflix-task1.vercel.app/"><button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button></a>
           </div>
         </div>
         <div class="project-container">
@@ -401,12 +401,49 @@
             <img src="" alt="" class="projects-sc">
           </div>
           <div class="d-flex justify-content-center">
-            <button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button>
-            <button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button>
+            <a href=""><button class="btn-view"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i> Github</button></a>
+            <a href=""><button class="btn-view"><i class="fa-solid fa-eye fa-lg" style="color: #ffffff;"></i> Live</button></a>
           </div>
         </div>
   
       </div>
+      </div>
+      <div id="contactMe">
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+          <div class="row align-items-center g-lg-5 py-5">
+            <div class="col-lg-7 text-center text-lg-start">
+              <h1 class="display-4 fw-bold lh-1 mb-3 text-white text-center">Contact me</h1>
+              <div class="col-lg-10 fs-4 justify-content-center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52892.39222951195!2d18.422774425662134!3d-34.04965474925542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc42487d210221%3A0x356e4d40be6f15d2!2sDiep%20River%2C%20Cape%20Town!5e0!3m2!1sen!2sza!4v1698929121781!5m2!1sen!2sza" width="550" height="350" style="border-radius: 15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+            <div class="col-md-10 mx-auto col-lg-5">
+              <form action="" method="post" class="p-4 p-md-5 border rounded-4" id="formBody">
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control bg-transparent border-0 border-bottom" name="floatingName" id="floatingName" placeholder="name@example.com">
+                  <label for="floatingName" class="text-white">Name:</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="email" class="form-control bg-transparent border-0 border-bottom" name="floatingInput" id="floatingInput" placeholder="name@example.com">
+                  <label for="floatingInput" class="text-white">Email:</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control bg-transparent border-0 border-bottom" name="floatingMessage" id="floatingMessage" placeholder="Your message">
+                  <label for="floatingMessage" class="text-white">Your Message:</label>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <button class="btn-btn" type="submit">Contact Brandon</button>
+                </div>
+                <hr class="my-4">
+                <div class="d-flex justify-content-evenly">
+                  <a href=""><i class="fa-brands fa-facebook-f fa-lg" id="contactIconOne" style="color: #f5f5f5;"></i></a>
+                  <a href=""><i class="fa-brands fa-instagram fa-lg" id="contactIconTwo" style="color: #ffffff;"></i></a>
+                  <a href=""><i class="fa-brands fa-linkedin-in fa-lg" id="contactIconThree" style="color: #ffffff;"></i></a>
+                  <a href=""><i class="fa-brands fa-github fa-lg" id="contactIconFour" style="color: #ffffff;"></i></a>
+                  <a href=""><i class="fa-brands fa-twitter fa-lg" id="contactIconFive" style="color: #ffffff;"></i></a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- <footer class="pt-5 my-5 text-white border-top">
         Written by Brandon Roulstone &middot; &copy; 2023
