--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="https://i.postimg.cc/WbpD3WfZ/20231103-075902.jpg" alt="" class="img-img">
           </div>
         </div>
-        <!-- +++++End of Media queries code++++ -->
+
         
         <!-- Navbar -->
         <nav>
@@ -55,7 +55,7 @@
               <a href="#aboutPage"><i class="fa-solid fa-circle-info fa-2xl" style="color: #000000;" id="iconTwo"></i></a>
             </li>
             <li class="nav-icon" id="ContactPage">
-              <a href="#testimonials"><i class="fa-solid fa-comment fa-2xl" style="color: #000000;" id="iconTwo"></i></a>
+              <a href="#testimonialsSection"><i class="fa-solid fa-comment fa-2xl" style="color: #000000;" id="iconTwo"></i></a>
             </li>
             <li class="nav-icon" id="ProjectsPage">
               <a href="#myProjects"><i class="fa-solid fa-file-pen fa-2xl" style="color: #000000;" id="iconFour"></i></a>
@@ -213,99 +213,89 @@
       </div>
     </div>
 
+    <div id="testimonialsSection">
+        <div class="person-id">
+          <div class="img-profile">
+            <img src="https://i.postimg.cc/2jg9xcVB/joel2.jpg" title="Lecturer" alt="joel2" id="Img_img">
+          </div>
+          <h2 class="person-name">Joel Mukanya</h2>
+          <p class="txt">Brandon is a creative, talented, and well-behaved individual who always prioritizes his work. He excels in collaborating with others and has gained proficiency in HTML5, CSS, and Bootstrap. Including Git and GitHub.</p>
+        </div>
+        <div class="person-id">
+          <div class="img-profile">
+            <img src="https://i.postimg.cc/65NgXbtx/IMG-20221026-WA0001.jpg" alt="Tauha_Shaik" title="Tauha_Shaik" id="Img_img-2">
+          </div>
+          <h2 class="person-name">Tauha Shaik</h2>
+          <p class="txt">Brandon Roulstone is an exceptional individual in both work ethic and character. His skills are proficient and expertly executed and his projects are a true display of this. His hard work and dedication is a result of his drive and passion for coding and he will be a great asset to all those around him.</p>
+        </div>
+        <div class="person-id">
+          <div class="img-profile">
+            <img src="https://i.postimg.cc/nzygSpnN/IMG-20211025-134530-422.jpg" title="Damon_Raffels" alt="Damon_Raffels" id="Img_img-3">
+          </div>
+          <h2 class="person-name">Damon Raffels</h2>
+          <p class="txt">Brandon is an extremely dedicated worker, giving his all to every project, task and most importantly, to himself; always improving his skills and growing his knowledge. He works well with others, always willing to listen and see others' perspectives on topics and issues. He has a humbling amount of knowledge of his field of work and has a great presence. I am proud to call him a colleague and a friend</p>
+        </div>
+        <div class="person-id">
+          <div class="img-profile">
+            <img src="https://i.postimg.cc/Hkkk0DBT/IMG-20231031-070042.jpg" title="Khwezilomso Mbobo" alt="Khwezilomso Mbobo" id="Img_img-4">
+          </div>
+          <h2 class="person-name">Khwezilomso Mbobo</h2>
+          <p class="txt">Brandon is the most knowledgeable person I've ever known in the field of coding. An exception a talent with a one of a kind personality. His friendly character and cheerful spirit uplift all those lucky enough to be around him as he is always ready to help where ever he can</p>
+        </div>
+
+
+        <div class="--testimonial">
+
+          <h3 class="text-center text-white">Add Your personal testimony</h3>
+          <div class="d-flex justify-content-center m-3">
+            <button class="create-testimonial"              
+            type="button" 
+            data-bs-toggle="offcanvas" 
+            data-bs-target="#offcanvasId">
+            <i class="fa-solid fa-plus fa-lg"></i>
+            </button>
+           <div class="offcanvas offcanvas-start" 
+              id="offcanvasId"> 
+              <div class="offcanvas-header"> 
+                <i class="fa-solid fa-b fa-2xl" style="color: #ffffff;"></i><p class="text-uppercase text-bg-dark rounded-3">Add Something..</p>
+                  <button type="button" 
+                          class="text-reset btn-close" 
+                          data-bs-dismiss="offcanvas"> 
+                  </button> 
+              </div> 
+              <div class="offcanvas-body" style="background-color: var(--black);"> 
+                <div class="nav-item">
+                  <div class="col-lg-4 bg-body-secondary border rounded-3 w-100" style="background:var(--BnW);">
+                    <div class="d-flex justify-content-center">
+                      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    </div>
+                    <input type="text" name="" id="inputName" class="w-100 placeholder-glow bg-transparent" placeholder="Add Name and Surname">
+                    <input type="text" name="" id="inputComment" class="w-100 placeholder-glow bg-transparent" placeholder="Add something about me">
+                    <br>
+                    <p class="text-black text-center">Add your socials</p>
+                    <div class="d-flex justify-content-evenly">
+                      <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialOne"></i>
+                      <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialTwo"></i>
+                      <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialThree"></i>
+                      <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialFour"></i>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                      <button class="btn-post">Post</button>
+                    </div>
+                     <p class="small text-center text-white">need author's permission</p>
+                  </div>
+                </div>
+              </div>
+           </div>
+         </div>
+
+        </div>
+    </div>
+
 
     
-    <div id="testimonials">
-      <div class="intro">
-        <h2 class="h2-txt">Testimonials</h2>
-      </div>
-      <!-- Row one -->
-      <div id="testimonialChild">
-        <div class="d-flex justify-content-center">
-          <div class="row">
-            <div class="col-lg-4 bg-body-secondary border rounded-3" id="testimonialOne">
-              <div class="d-flex justify-content-center">
-                <img src="https://i.postimg.cc/2jg9xcVB/joel2.jpg" title="Lecturer" alt="joel2" id="Img_img">
-              </div>
-              <h2 class="fw-normal text-center text-black">Joel Mukanya</h2>
-              <p class="text-center text-black" id="testimonialOneTxt">Brandon is a creative, talented, and well-behaved individual who always prioritizes his work. He excels in collaborating with others and has gained proficiency in HTML5, CSS, and Bootstrap. Including Git and GitHub.</p>
-            </div>
-  
-            <div class="col-lg-4 bg-body-secondary border rounded-3" id="testimonialTwo">
-              <div class="d-flex justify-content-center">
-                <img src="https://i.postimg.cc/65NgXbtx/IMG-20221026-WA0001.jpg" alt="Tauha_Shaik" title="Tauha_Shaik" id="Img_img-2">
-              </div>
-              <h2 class="fw-normal text-center text-black">Tauha Shaik</h2>
-              <p class="text-center text-black">Brandon Roulstone is an exceptional individual in both work ethic and character. His skills are proficient and expertly executed and his projects are a true display of this. His hard work and dedication is a result of his drive and passion for coding and he will be a great asset to all those around him.</p>
-            </div>
-          </div>
-        </div>
-  
-        <!-- row two -->
-        <div class="d-flex justify-content-center">
-          <div class="row m-4">
-            <div class="col-lg-4 bg-body-secondary border rounded-3" id="testimonialFour">
-              <div class="d-flex justify-content-center">
-                <img src="https://i.postimg.cc/nzygSpnN/IMG-20211025-134530-422.jpg" title="Damon_Raffels" alt="Damon_Raffels" id="Img_img-3">
-              </div>
-              <h2 class="fw-normal text-center text-black">Damon Raffels</h2>
-              <p class="text-center text-black">Brandon is an extremely dedicated worker, giving his all to every project, task and most importantly, to himself; always improving his skills and growing his knowledge. He works well with others, always willing to listen and see others' perspectives on topics and issues. He has a humbling amount of knowledge of his field of work and has a great presence. I am proud to call him a colleague and a friend</p>
-            </div>
-  
-            <div class="col-lg-4 bg-body-secondary border rounded-3" id="testimonialFive">
-              <div class="d-flex justify-content-center">
-                <img src="https://i.postimg.cc/Hkkk0DBT/IMG-20231031-070042.jpg" title="Khwezilomso Mbobo" alt="Khwezilomso Mbobo" id="Img_img-4">
-              </div>
-              <h2 class="fw-normal text-center text-black">Khwezilomso Mbobo</h2>
-              <p class="text-center text-black">Brandon is the most knowledgeable person I've ever known in the field of coding. An exception a talent with a one of a kind personality. His friendly character and cheerful spirit uplift all those lucky enough to be around him as he is always ready to help where ever he can</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <h3 class="text-center text-white">Add Your personal testimony</h3>
-      <div class="d-flex justify-content-center m-3">
-        <button class="create-testimonial"              
-        type="button" 
-        data-bs-toggle="offcanvas" 
-        data-bs-target="#offcanvasId">
-        <i class="fa-solid fa-plus fa-lg"></i>
-        </button>
-       <div class="offcanvas offcanvas-start" 
-          id="offcanvasId"> 
-          <div class="offcanvas-header"> 
-            <i class="fa-solid fa-b fa-2xl" style="color: #ffffff;"></i><p class="text-uppercase text-bg-dark rounded-3">Add Something..</p>
-              <button type="button" 
-                      class="text-reset btn-close" 
-                      data-bs-dismiss="offcanvas"> 
-              </button> 
-          </div> 
-          <div class="offcanvas-body" style="background-color: var(--black);"> 
-            <div class="nav-item">
-              <div class="col-lg-4 bg-body-secondary border rounded-3 w-100" style="background:var(--BnW);">
-                <div class="d-flex justify-content-center">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-                </div>
-                <input type="text" name="" id="inputName" class="w-100 placeholder-glow bg-transparent" placeholder="Add Name and Surname">
-                <input type="text" name="" id="inputComment" class="w-100 placeholder-glow bg-transparent" placeholder="Add something about me">
-                <br>
-                <p class="text-black text-center">Add your socials</p>
-                <div class="d-flex justify-content-evenly">
-                  <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialOne"></i>
-                  <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialTwo"></i>
-                  <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialThree"></i>
-                  <i class="fa-solid fa-plus fa-2xs" style="color: #000000;" id="addIconSocialFour"></i>
-                </div>
-                <div class="d-flex justify-content-center">
-                  <button class="btn-post">Post</button>
-                </div>
-                <p class="small text-center text-white">need author's permission</p>
-              </div>
-              </div>
-      </div>
-      </div>
-    </div>
-    <div id="myProjects">
+    <div id="bottomSection">
+     <div id="myProjects">
       <div class="pro-container">
 
         <div class="project-container">
