--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a href=""><i class="fa-brands fa-facebook-f fa-2xl" style="color: #000000;"></i></a>
             </li>
             <li class="icon-link-side">
-              <a href=""><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #000000;"></i></a>
+              <a href="https://www.linkedin.com/in/brandon-roulstone-4b69a9290/"><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #000000;"></i></a>
             </li>
             <li class="icon-link-side">
               <a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></a>
@@ -38,7 +38,7 @@
               </div>
             </ul>
           <div class="img-intro">
-            <img src="https://i.postimg.cc/WbpD3WfZ/20231103-075902.jpg" alt="" class="img-img">
+            <img src="https://i.postimg.cc/WbpD3WfZ/20231103-075902.jpg" title="Mr Brandon Roulstone" alt="Himothy--" class="img-img">
           </div>
         </div>
 
@@ -127,7 +127,6 @@
         <div class="dropdown">
           <h2 class="d-flex justify-content-center text-white">Intermediate</h2>
           <p class="small text-white text-center">current rating of intermediate phase:</p>
-          <p class="small text-white text-center">react js project(Still in working progress): <a href="https://github.com/FrostXk9/E-commerce-website">E-commerce-website</a> </p>
           <p class="small text-white text-center">Hover Me! or Click Me!</p>
           <div class="d-flex justify-content-center">
     
@@ -215,7 +214,7 @@
       </div>
     </div>
 
-    <div id="testimonialsSection">
+    <div id="testimonialsSection" class="container-fluid">
         <div class="person-id">
           <div class="img-profile">
             <img src="https://i.postimg.cc/2jg9xcVB/joel2.jpg" title="Lecturer" alt="joel2" id="Img_img">
@@ -371,8 +370,8 @@
             <div class="col-lg-7 text-center text-lg-start">
               <h1 class="display-4 fw-bold lh-1 mb-3 text-white text-center">Contact me</h1>
               <div class="d-flex justify-content-evenly" id="contactIcons">
-                <a href=""><i class="fa-brands fa-linkedin-in fa-lg" id="contactIconThree" style="color: #ffffff;"></i></a>
-                <a href=""><i class="fa-brands fa-github fa-lg" id="contactIconFour" style="color: #ffffff;"></i></a>
+                <a href="https://www.linkedin.com/in/brandon-roulstone-4b69a9290/"><i class="fa-brands fa-linkedin-in fa-lg" id="contactIconThree" style="color: #ffffff;"></i></a>
+                <a href="https://github.com/brandonRoulstone"><i class="fa-brands fa-github fa-lg" id="contactIconFour" style="color: #ffffff;"></i></a>
               </div>
             </div>
             <div class="col-md-10 mx-auto col-lg-5">
